[gd_scene load_steps=2 format=3 uid="uid://command_ui"]

[ext_resource type="Script" path="res://scripts/ui/command_ui.gd" id="1_script"]

[node name="CommandUI" type="Control"]
custom_minimum_size = Vector2(200, 220)
layout_mode = 3
anchors_preset = 0
offset_right = 200.0
offset_bottom = 220.0
script = ExtResource("1_script")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -8.0
theme_override_constants/separation = 6

[node name="BoostContainer" type="HBoxContainer" parent="VBox"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="BoostLabel" type="Label" parent="VBox/BoostContainer"]
layout_mode = 2
text = "Boost [R]"

[node name="BoostIndicator" type="HBoxContainer" parent="VBox/BoostContainer"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_constants/separation = 4

[node name="HSeparator" type="HSeparator" parent="VBox"]
layout_mode = 2

[node name="CommandList" type="VBoxContainer" parent="VBox"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="SkillPanel" type="Panel" parent="VBox"]
visible = false
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_vertical = 3

[node name="SkillList" type="VBoxContainer" parent="VBox/SkillPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = 5.0
offset_right = -5.0
offset_bottom = -5.0
theme_override_constants/separation = 2

[node name="DescriptionLabel" type="Label" parent="VBox"]
layout_mode = 2
text = "커맨드를 선택하세요"
autowrap_mode = 2
theme_override_font_sizes/font_size = 11
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
